--- a/about.html
+++ b/about.html
@@ -1,55 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OLá mundo</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta name="Description" content="Enter your description here"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+<link rel="stylesheet" href="assets/css/style.css">
+<title>Page</title>
 </head>
 <body>
-<?echo "ola mundo"
-?>    
-<div><ul>
-    <li>quem</li>
-    <li>o quê</li>
-    <li>quando</li>
-    <li>para quem</li>
-    <li>Quando</li></ul>
-</ul>*5</div>
-
-<ul>
-    <li></li>
-</ul>
-<ul>
-    <5></5>
-    <li></li>
-</ul>
-<div>
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
-</div>
 <main>
     <section>
         <div>
+            <h1>My page</h1>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>BANANA</li>
+                <li>LIMÃO</li>
+                <li>LARANJA</li>
+                <li>CAJU</li>
+                <li>GOIABA</li>
             </ul>
         </div>
     </section>
 </main>
-<ul>
-    <li>x</li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-</ul>
 
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </body>
 </html>
