--- a/products.html
+++ b/products.html
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="Description" content="Enter your description here" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="scripts/script_soma.js"></script>
+    <title>
+    </title>
 </head>
+
 <body>
-    
+<h1>CALCULADORA</h1>
+    </form>
+    <form action="/">
+        <div class="accounttype">
+            <div class="form-group">
+                <label for=""></label>
+                <input type="text" name="valor1" id="valor1" class="form-control" placeholder="Valor 1"
+                    aria-describedby="helpId">
+                <small id="helpId" class="text-muted"></small>
+            </div>
+            <div class="form-group">
+                <label for=""></label>
+                <input type="text" name="valor2" id="valor2" class="form-control" placeholder="Valor 2"
+                    aria-describedby="helpId">
+                <small id="helpId" class="text-muted"></small>
+            </div>
+            <div class="form-group">
+                <label for=""></label>
+                <select class="form-control" name="" id="op">
+                    <option value="" selected="selected">Escolha a operação</option>
+                    <option value="1">+</option>
+                    <option value="2">-</option>
+                    <option value="3">*</option>
+                    <option value="4">/</option>
+                </select>
+            </div>
+            <button type="button" class="btn btn-primary" onclick="exemplo1()">Calcular</button>
+            <button type="reset" id="reset" name="reset" class="btn btn-primary">Limpar</button>
+            <div class="form-group">
+                <label for=""></label>
+                <input type="text" name="desultado" id="resultado" class="form-control" placeholder="Resultado"
+                    aria-describedby="helpId">
+                <small id="helpId" class="text-muted"></small>
+            </div>
+        </div>
+    </form>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </body>
+
 </html>
